# quicksilver

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFilesystem.cmake
data/: graph.csv  graph2.csv  graph_test.csv  queries.csv  queries2.csv  queries_real.csv  queries_test.csv  queries_test_len1.csv  queries_test_len2.csv  queries_test_len3+.csv  queries_test_startlen2.csv  queries_test_tc.csv  queries_test_tc2+.csv
include/: Estimator.h  Evaluator.h  Graph.h  Histogram.h  PathQuery.h  PathTree.h  SimpleEstimator.h  SimpleEvaluator.h  SimpleGraph.h  benches.h  rss.h
include/student/: AdjList.h  AdjMatrix.h  CustomEvaluator.h  csr.h  k2Tree.h
src/: Histogram.cpp  PathQuery.cpp  PathTree.cpp  SimpleEstimator.cpp  SimpleEvaluator.cpp  SimpleGraph.cpp  benches.cpp  benchmarker.cpp  main.cpp  rss.c
src/student/: AdjList.cpp  AdjMatrix.cpp  CustomEvaluator.cpp  csr.cpp  k2Tree.cpp
workload/real/1/: graph.nt  queries.csv
workload/real/2/: graph.nt  queries.csv  test.csv
workload/real/3/: queries.csv
workload/real/4/: queries.csv
workload/real/5/: queries.csv
workload/syn/1/: graph.nt  queries.csv  tests.csv
